--- a/blog-app/pom.xml
+++ b/blog-app/pom.xml
@@ -13,6 +13,14 @@
  		<version>3.8.1</version>
  		<scope>test</scope>
 	</dependency>
- </dependencies>
+	
+	<dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-core</artifactId>
+         <version>4.4.0</version>
+         <scope>test</scope>
+     </dependency>
+     
+  </dependencies>
 
 </project>
